Completed Image Assembling

--- a/index.html
+++ b/index.html
@@ -1,50 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login to Vote</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Comic-Con Register</title>
 </head>
+
 <body>
-    
+
     <!-- SECTION Main Login Window -->
     <div class="window">
         <!-- SECTION Image Section -->
         <div class="image">
-            <picture>
-                <source srcset="image-big.png" type="image/png" media="(min-width:1920px)"> 
-                <source srcset="image-med.png" type="image/png" media="(min-width:1200px)"> 
-                <source srcset="image-small.png" type="image/png" media="(min-width:700px)"> 
-                <img src="blue.png" alt="Test" class="abc">
-            </picture>
-            <picture style="display:none">
-                <source srcset="image-big.png" type="image/png" media="(min-width:1920px)"> 
-                <source srcset="image-med.png" type="image/png" media="(min-width:1200px)"> 
-                <source srcset="image-small.png" type="image/png" media="(min-width:700px)"> 
-                <img src="blue.png" alt="Test" class="abc">
-            </picture>
+            <!-- <img src="./assets/DC_Bg.webp" alt="DC Background" class="BG"> -->
+            <div class="logo">
+                <img src="assets/DC_Logo.png" alt="DC Logo">
+            </div>
         </div>
         <!-- !SECTION -->
         <!-- SECTION  Form Login-->
         <div class="form">
-            <form action="">
+            <p>
+                This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Necessitatibus, commodi!
+            </p>
+            <p>
+                Sign up now to get started.
+            </p>
+            <p>
+                You know you want to.
+            </p>
+            <form>
                 <!-- ANCHOR Form -->
-                <label for="fname">First Name</label>
-                <input type="text" name="first_name" id="fname">
-                <label for="lname">Last Name</label>
-                <input type="text" name="last_name" id="lname">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-                <label for="pwd">Password</label>
-                <input type="password" name="password" id="pwd">
-                <input type="submit" value="">
+                <div class="field">
+                    <label for="fname">First Name</label>
+                    <input type="text" name="first_name" id="fname">
+                </div>
+                <div class="field">
+                    <label for="lname">Last Name</label>
+                    <input type="text" name="last_name" id="lname">
+                </div>
+                <div class="field">
+                    <label for="email">E-Mail</label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="field">
+                    <label for="pwd">Password</label>
+                    <input type="password" name="password" id="pwd">
+                </div>
+                <div class="field">
+                    <label for="charcter">Character</label>
+                    <input type="text" name="character" id="character">
+                </div>
                 <!-- ANCHOR Vote Toggle -->
-                <input type="button" value="" class="toggle AV JL">
+                <div class="toggle">
+                    <input type="radio" value="" class="DC">
+                    <input type="radio" value="" class="rand">
+                    <input type="radio" value="" class="MARVEL">
+                </div>
+                <!-- ANCHOR Submit -->
+                <input type="submit" value="Register" class="button">
             </form>
         </div>
         <!-- !SECTION -->
     </div>
     <!-- !SECTION -->
 </body>
+
 </html>
