--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                 </div>
                 <div class="field">
                     <input type="email" name="email" id="email" class="text" required placeholder=" "
-                        autocomplete="off">
+                        autocomplete="email">
                     <label for="email">E-Mail</label>
                 </div>
                 <div class="field">
                     <input type="number" name="number" id="number" class="text" placeholder=" " autocomplete="off">
-                    <label for="number">Phone Number</label>
+                    <label for="number"">Phone Number</label>
                 </div>
-                <div class="field">
-                    <input type="password" name="password" id="pwd" class="text" required placeholder=" "
-                        autocomplete="off">
-                    <label for="pwd">Password</label>
+                <div class=" field">
+                        <input type="password" name="password" id="pwd" class="text" required placeholder=" "
+                            autocomplete="new-password">
+                        <label for="pwd">Password</label>
                 </div>
                 <div class="field">
                     <input type="password" name="cpassword" id="cpwd" class="text" required placeholder=" "
-                        autocomplete="off">
+                        autocomplete="new-password">
                     <label for="cpwd">Confirm Password</label>
                 </div>
                 <div class="choice">
