Font Fix for Input Labels

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 </div>
                 <div class="field">
                     <input type="number" name="number" id="number" class="text" placeholder=" " autocomplete="off">
-                    <label for="number"">Phone Number</label>
+                    <label for="number">Phone Number</label>
                 </div>
                 <div class=" field">
-                        <input type="password" name="password" id="pwd" class="text" required placeholder=" "
-                            autocomplete="new-password">
-                        <label for="pwd">Password</label>
+                    <input type="password" name="password" id="pwd" class="text" required placeholder=" "
+                        autocomplete="new-password">
+                    <label for="pwd">Password</label>
                 </div>
                 <div class="field">
                     <input type="password" name="cpassword" id="cpwd" class="text" required placeholder=" "
