--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 </div>
                 <div class="field">
                     <input type="number" name="number" id="number" class="text" placeholder=" " autocomplete="off">
-                    <label for="number">Phone Number</label>
+                    <label for="number" minlength="10">Phone Number</label>
                 </div>
                 <div class=" field">
                     <input type="password" name="password" id="pwd" class="text" required placeholder=" "
-                        autocomplete="new-password">
+                        autocomplete="new-password" minlength="8">
                     <label for="pwd">Password</label>
                 </div>
                 <div class="field">
                     <input type="password" name="cpassword" id="cpwd" class="text" required placeholder=" "
-                        autocomplete="new-password">
+                        autocomplete="new-password" minlength="8">
                     <label for="cpwd">Confirm Password</label>
                 </div>
                 <div class="choice">
@@ -79,6 +79,8 @@
         <!-- !SECTION -->
     </div>
     <!-- !SECTION -->
+
+    <script defer src="./script.js"></script>
 </body>
 
 </html>
