Background Color Change

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>
                 Register with your Comic Character!
             </p>
-            <form>
+            <form action="">
                 <!-- ANCHOR Form -->
                 <div class="field">
                     <input type="text" name="first_name" id="fname" class="text" placeholder=" " autocomplete="off">
@@ -63,7 +63,7 @@
                     <!-- ANCHOR Vote Toggle -->
                     <div class="toggle">
                         <input type="radio" name="comic-char" value="dc" class="tog dc" data-choice="DC">
-                        <input type="radio" name="comic-char" value="rand" class="tog rand" data-choice="Others">
+                        <input type="radio" name="comic-char" value="rand" class="tog rand select" data-choice="Others">
                         <input type="radio" name="comic-char" value="marvel" class="tog marvel" data-choice="Marvel">
                     </div>
                     <div class="field">
