--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- SECTION Image Section -->
         <div class="image">
             <div class="logo">
-                <img src="assets/DC_Logo.png" alt="DC Logo">
+                <img src="assets/Rand_Logo.png" alt="Logo" id="logo">
             </div>
         </div>
         <!-- !SECTION -->
@@ -80,7 +80,7 @@
     </div>
     <!-- !SECTION -->
 
-    <script defer src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
